# goph419-f2025-lab02-stBK

./: README.md  pyproject.toml
examples/: tests.py
src/lab02/: linalg.py
